# deacon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README-python.md  README.md  RELEASING.md  benchmark_commits.sh  benchmark_commits_range.sh  benchmark_commits_sparse.sh  collate_benchmarks.sh  plot_benchmarks.py  pyproject.toml  reads_1.fastq  reads_2.fastq  ref.fasta
.cargo/: config-portable.toml  config-wasm.toml  config.toml
.github/workflows/: release-pypi.yaml  release-python.yaml  release.yaml  release.yml  test.yml
bench/: chm13-lr-05c40a8-1.json  chm13-lr-05c40a8-2.json  chm13-lr-0b91002-1.json  chm13-lr-0b91002-2.json  chm13-lr-15dcef6-1.json  chm13-lr-15dcef6-2.json  chm13-lr-1adfe8d-1.json  chm13-lr-1adfe8d-2.json  chm13-lr-28c6e2c-1.json  chm13-lr-28c6e2c-2.json  chm13-lr-38f0dfe-1.json  chm13-lr-38f0dfe-2.json  chm13-lr-3f1bac1-1.json  chm13-lr-3f1bac1-2.json  chm13-lr-4249cab-1.json  chm13-lr-4249cab-2.json  chm13-lr-4558ff8-1.json  chm13-lr-4558ff8-2.json  chm13-lr-4ae4be8-1.json  chm13-lr-4ae4be8-2.json  chm13-lr-4e015f2-1.json  chm13-lr-4e015f2-2.json  chm13-lr-52b0d76-1.json  chm13-lr-52b0d76-2.json  chm13-lr-54a2851-1.json  chm13-lr-54a2851-2.json  chm13-lr-5df0567-1.json  chm13-lr-5df0567-2.json  chm13-lr-6467204-1.json  chm13-lr-6467204-2.json  chm13-lr-71d0772-1.json  chm13-lr-71d0772-2.json  chm13-lr-7687fab-1.json  chm13-lr-7687fab-2.json  chm13-lr-79e811e-1.json  chm13-lr-79e811e-2.json  chm13-lr-7ad762e-1.json  chm13-lr-7ad762e-2.json  chm13-lr-9612b88-1.json  chm13-lr-9612b88-2.json  (+76 more)
deacon-py/: Cargo.toml  pyproject.toml
deacon-py/python/: README.md
deacon-py/python/deacon/: __init__.py  _deacon.pyi
deacon-py/src/: lib.rs
deacon-wasm/: Cargo.toml  index.html  protocol.test.mjs  test_wasm.cjs  test_wasm_debug.cjs  worker.js
deacon-wasm-bench/: Cargo.toml
deacon-wasm-bench/src/: main.rs
deacon-wasm/src/: lib.rs
deacon-web/: Cargo.toml  index.html  test_wasm.mjs  test_wasm_counts.cjs  worker.js
deacon-web/src/: lib.rs
packed-seq-patch/: .cargo_vcs_info.json  Cargo.toml
scripts/: bench-filter-ab.sh  build-wasm.sh  check-wasm-paired-parity.sh  check-wasm-parity.sh  gen-py-stubs.sh  run-wasm.sh  wasm_bench.mjs  wasm_filter_to_file.mjs  wasm_paired_filter_to_file.mjs  wasm_smoke_test.mjs
simd-minimizers-patch/: .cargo_vcs_info.json  Cargo.toml
simd-minimizers-patch/src/intrinsics/: dedup.rs
src/: filter.rs  filter_common.rs  filter_kernel.rs  hashset.rs  index.rs  lib.rs  local_filter.rs  main.rs  minimizers.rs  remote_filter.rs  server.rs  server_common.rs
tests/: cli_tests.rs  filter_tests.rs  index_tests.rs  server_tests.rs
