[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "deacon"
description = "Fast DNA search and [host] depletion using minimizers"
readme = "python/README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bede/deacon"
Repository = "https://github.com/bede/deacon"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "deacon._deacon"
profile = "pyext"
features = ["extension-module"]
