[package]
name = "deacon-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
deacon = { path = "..", default-features = false, features = ["scalar", "gz"] }
wasm-bindgen = "0.2.113"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
needletail = { version = "0.6", default-features = false, features = ["flate2"] }
flate2 = "1.1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
memchr = "2.7"
